tests/NormalTests/paczka1/small_fuzzy/22427520.err
Error in line 3: sJvj7tFP9Y A558 7A,3
Error in line 12: n72KIH S152 244,2
